[gd_scene load_steps=12 format=3 uid="uid://db51o88uxdxf7"]

[ext_resource type="Script" uid="uid://d3pdk5x7ot8qo" path="res://Scripts/menu_principal.gd" id="1_853f1"]
[ext_resource type="Texture2D" uid="uid://bgrnqam85e464" path="res://Import/Icon/image bien.png" id="2_853f1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n806c"]
bg_color = Color(0.79607844, 0.85882354, 0.972549, 0.4745098)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_liwpa"]
bg_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pxfp"]
bg_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h33ay"]
bg_color = Color(0.79607844, 0.85882354, 0.972549, 0.4745098)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbxwo"]
bg_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x57wl"]
bg_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll0w1"]
bg_color = Color(0.79607844, 0.85882354, 0.972549, 0.4745098)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g85l6"]
bg_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80s3h"]
bg_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.2784314, 0.43137255, 0.68235296, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_853f1")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 8.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_853f1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -97.00003
offset_right = 338.0
offset_bottom = 331.74268
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.103226)
theme_override_constants/separation = 20
alignment = 1

[node name="start_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.22745098, 0.41568628, 0.5019608, 1)
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_n806c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_liwpa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5pxfp")
text = "START"

[node name="tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.22745098, 0.41568628, 0.5019608, 1)
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_h33ay")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kbxwo")
theme_override_styles/hover = SubResource("StyleBoxFlat_x57wl")
text = "TUTORIEL"

[node name="quit_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.22745098, 0.41568628, 0.5019608, 1)
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_ll0w1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g85l6")
theme_override_styles/hover = SubResource("StyleBoxFlat_80s3h")
text = "QUIT"

[connection signal="button_down" from="VBoxContainer/start_btn" to="." method="_on_start_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="VBoxContainer/quit_btn" to="." method="_on_quit_btn_button_down"]
